tests/baselines/reference/baseTypePrivateMemberClash.errors.txt
baseTypePrivateMemberClash.ts(8,11): error TS2320: Interface 'Z' cannot simultaneously extend types 'X' and 'Y'.
  Named property 'm' of types 'X' and 'Y' are not identical.


==== baseTypePrivateMemberClash.ts (1 errors) ====
    class X {
        private m: number;
    }
    class Y {
        private m: string;
    }
    
    interface Z extends X, Y { }
              ~
!!! error TS2320: Interface 'Z' cannot simultaneously extend types 'X' and 'Y'.
!!! error TS2320:   Named property 'm' of types 'X' and 'Y' are not identical.